--- a/4islMeS03/4islMeS03.csproj
+++ b/4islMeS03/4islMeS03.csproj
@@ -53,6 +53,7 @@
     </Compile>
     <Compile Include="function.cs" />
     <Compile Include="GradientSolver.cs" />
+    <Compile Include="grs04.cs" />
     <Compile Include="Koeffinder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
