--- a/4islMeS03/4islMeS03.csproj
+++ b/4islMeS03/4islMeS03.csproj
@@ -53,7 +53,10 @@
     </Compile>
     <Compile Include="function.cs" />
     <Compile Include="GradientSolver.cs" />
+    <Compile Include="gradWikiCuted.cs" />
+    <Compile Include="gradWikiCuted2.cs" />
     <Compile Include="grs04.cs" />
+    <Compile Include="grswiki.cs" />
     <Compile Include="Koeffinder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
